# car_logging

./: .gitignore  CMakeLists.txt  README.md  arm-toolchain.cmake  config.yaml
app/: CMakeLists.txt  run_offline.cpp
data/: 2025-01-03_14-25-22.txt  2025-01-03_16-10-00.txt  2025-01-03_16-15-41.txt  2025-01-04_16-53-24.txt  2025-01-04_18-03-15.txt
include/: GdWorker.h  localization_impl.h  localization_impl.hpp  utils.hpp
log/: drpose.txt  egopose.txt  gps_points.kmz  gps_points.txt  gpsdata.txt  gpspose.txt  imudata.txt  log.txt  veldata.txt
scripts/: check.py  gpstokml.py  plot_vel.py
src/: GdWorker.cpp  localization_impl.cpp  log_test.cpp  newlog.cpp  run_offline.cpp  run_offline_1030.cpp  run_online.cpp
